--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="app_name">My Notes APP</string>
+    <string name="app_name">Notes Pro</string>
 
     <string name="hey_there_">Hey there</string>
 
